Feature refactoring, structure simplifying